@@ -10,6 +10,8 @@ import edu.iu.terracotta.model.app.dto.ConditionDto;
 import edu.iu.terracotta.repository.AllRepositories;
 import edu.iu.terracotta.service.app.ConditionService;
 import edu.iu.terracotta.utils.TextConstants;
+
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.EmptyResultDataAccessException;
@@ -18,29 +20,22 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.util.UriComponentsBuilder;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @SuppressWarnings({"PMD.PreserveStackTrace"})
 public class ConditionServiceImpl implements ConditionService {
 
     @Autowired
-    AllRepositories allRepositories;
+    private AllRepositories allRepositories;
 
     @Override
     public List<ConditionDto> findAllByExperimentId(long experimentId) {
-        List<Condition> conditions = allRepositories.conditionRepository.findByExperiment_ExperimentId(experimentId);
-        List<ConditionDto> conditionDtoList = new ArrayList<>();
-        if (!conditions.isEmpty()) {
-            for (Condition condition : conditions) {
-                conditionDtoList.add(toDto(condition));
-            }
-        }
-        return conditionDtoList;
+        return CollectionUtils.emptyIfNull(allRepositories.conditionRepository.findByExperiment_ExperimentId(experimentId)).stream()
+            .map(condition -> toDto(condition))
+            .toList();
     }
 
     @Override
@@ -48,11 +43,13 @@ public class ConditionServiceImpl implements ConditionService {
         if (conditionDto.getConditionId() != null) {
             throw new IdInPostException(TextConstants.ID_IN_POST_ERROR);
         }
+
         validateConditionName("", conditionDto.getName(), experimentId, 0L, false);
         validateMaximumConditionsNotReached(experimentId);
 
         conditionDto.setExperimentId(experimentId);
         Condition condition;
+
         try {
             condition = fromDto(conditionDto);
         } catch (DataServiceException e) {
@@ -64,7 +61,6 @@ public class ConditionServiceImpl implements ConditionService {
 
     @Override
     public ConditionDto toDto(Condition condition) {
-
         ConditionDto conditionDto = new ConditionDto();
         conditionDto.setConditionId(condition.getConditionId());
         conditionDto.setExperimentId(condition.getExperiment().getExperimentId());
@@ -77,16 +73,15 @@ public class ConditionServiceImpl implements ConditionService {
 
     @Override
     public Condition fromDto(ConditionDto conditionDto) throws DataServiceException {
-
         Condition condition = new Condition();
         condition.setConditionId(conditionDto.getConditionId());
         Optional<Experiment> experiment = allRepositories.experimentRepository.findById(conditionDto.getExperimentId());
-        if (experiment.isPresent()) {
-            condition.setExperiment(experiment.get());
-        } else {
+
+        if (!experiment.isPresent()) {
             throw new DataServiceException("The experiment for the condition does not exist");
         }
 
+        condition.setExperiment(experiment.get());
         condition.setName(conditionDto.getName());
         condition.setDefaultCondition(conditionDto.getDefaultCondition());
         condition.setDistributionPct(conditionDto.getDistributionPct());
@@ -127,7 +122,7 @@ public class ConditionServiceImpl implements ConditionService {
             ConditionDto conditionDto = entry.getValue();
             condition.setName(conditionDto.getName());
             condition.setDefaultCondition(conditionDto.getDefaultCondition());
-            condition.setDistributionPct((conditionDto.getDistributionPct()));
+            condition.setDistributionPct(conditionDto.getDistributionPct());
             save(condition);
         }
     }
@@ -151,10 +146,12 @@ public class ConditionServiceImpl implements ConditionService {
     public boolean duplicateNameInPut(Map<Condition, ConditionDto> map, Condition condition) {
         for (Map.Entry<Condition, ConditionDto> entry : map.entrySet()) {
             Condition conditionInPut = entry.getKey();
+
             if (condition.getName().equals(conditionInPut.getName())) {
                 return true;
             }
         }
+
         return false;
     }
 
@@ -166,8 +163,9 @@ public class ConditionServiceImpl implements ConditionService {
     @Override
     public HttpHeaders buildHeader(UriComponentsBuilder ucBuilder, Long experimentId, Long conditionId) {
         HttpHeaders headers = new HttpHeaders();
-        headers.setLocation(ucBuilder.path("/api/experiments/{experiment_id}/conditions/{condition_id}")
+        headers.setLocation(ucBuilder.path("/api/experiments/{experimentId}/conditions/{conditionId}")
                 .buildAndExpand(experimentId, conditionId).toUri());
+
         return headers;
     }
 
@@ -178,10 +176,12 @@ public class ConditionServiceImpl implements ConditionService {
                 throw new TitleValidationException("Error 100: Please give the condition a name.");
             }
         }
-        if (!StringUtils.isBlank(dtoName)) {
+
+        if (StringUtils.isNotBlank(dtoName)) {
             if (dtoName.length() > 255) {
                 throw new TitleValidationException("Error 101: Condition name must be 255 characters or less.");
             }
+
             if (nameAlreadyExists(dtoName, experimentId, conditionId)) {
                 throw new TitleValidationException("Error 102: Unable to create the condition. A condition with title \"" + dtoName + "\" already exists in this experiment. It is possible " +
                         "that one of the other conditions has that name and has not been updated with a new one yet. If that is the case and you wish to use this name, " +
@@ -194,10 +194,11 @@ public class ConditionServiceImpl implements ConditionService {
     public void validateConditionNames(List<ConditionDto> conditionDtoList, Long experimentId, boolean required) throws TitleValidationException {
         if (required) {
             for (ConditionDto conditionDto : conditionDtoList) {
-                if (StringUtils.isAllBlank(conditionDto.getName())) {
+                if (StringUtils.isBlank(conditionDto.getName())) {
                     throw new TitleValidationException("Error 100: Please give the condition a name.");
                 }
-                if (!StringUtils.isBlank(conditionDto.getName())) {
+
+                if (StringUtils.isNotBlank(conditionDto.getName())) {
                     if (conditionDto.getName().length() > 255) {
                         throw new TitleValidationException("Error 101: Condition name must be 255 characters or less.");
                     }
@@ -206,16 +207,16 @@ public class ConditionServiceImpl implements ConditionService {
         }
 
         for (ConditionDto condto : conditionDtoList) {
-            List<Condition> conditions = allRepositories.conditionRepository.
-                    findByNameAndExperiment_ExperimentIdAndConditionIdIsNot(condto.getName(), experimentId, condto.getConditionId());
+            List<Condition> conditions = allRepositories.conditionRepository.findByNameAndExperiment_ExperimentIdAndConditionIdIsNot(condto.getName(), experimentId, condto.getConditionId());
+
             if (!conditions.isEmpty()) {
                 for (Condition con : conditions) {
-                    List<ConditionDto> duplicates = conditionDtoList.stream().filter(co -> {
-                        if (co.getConditionId() == con.getConditionId() && co.getName().equals(con.getName())) {
-                            return true;
+                    List<ConditionDto> duplicates = conditionDtoList.stream()
+                        .filter(co -> {
+                            return co.getConditionId() == con.getConditionId() && co.getName().equals(con.getName());
                         }
-                        return false;
-                    }).collect(Collectors.toList());
+                    )
+                    .toList();
 
                     if (!duplicates.isEmpty()) {
                         throw new TitleValidationException("Error 102: Unable to create the condition. A condition with title \"" + condto.getName() + "\" already exists in this experiment. It is possible " +
@@ -230,10 +231,9 @@ public class ConditionServiceImpl implements ConditionService {
 
 
     private void validateMaximumConditionsNotReached(long experimentId) throws ExperimentConditionLimitReachedException {
-        List<Condition> conditions = allRepositories.conditionRepository.findByExperiment_ExperimentId(experimentId);
-        if (conditions.size() >= 16) {
-            throw new ExperimentConditionLimitReachedException(
-                    "Error 148: The experiment conditions limit of 16 conditions has been reached.");
+        if (allRepositories.conditionRepository.findByExperiment_ExperimentId(experimentId).size() >= 16) {
+            throw new ExperimentConditionLimitReachedException("Error 148: The experiment conditions limit of 16 conditions has been reached.");
         }
     }
+
 }
